pkl-core/src/test/files/LanguageSnippetTests/input/errors/mappingTypeCheckError7.pkl
res = new Mapping<Listing<String(length == 5)>, String> {
  [new Listing { "hi" }] = "hi"
}
